# AcoCuda

./: AcoCuda.kdev4  CMakeLists.txt  Dati  acocuda  acocuda.cu  acocuda.h  log.txt
.kdev4/: AcoCuda.kdev4
Debug/: acocuda.d  sources.mk  subdir.mk
Release/: acocuda.d  makefile  subdir.mk
